slider dotted number fix, section three cards text styled&centered, chart block bottom spacing decreased

--- a/assets/section-slider-dotted.css
+++ b/assets/section-slider-dotted.css
@@ -45,7 +45,7 @@
 .dotted-slide__pagination span {
     position: absolute;
     left: 50%;
-    top: 42%;
+    top: 40%;
     transform: translate(-50%, -50%);
 }
 
